--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
     <main>
         <div class="full-img" id="fullImgBox">
             <img src="images/buba16.jpg" id="fullImg" alt="">
-            <span onclick="closeFullImg()">X</span>
+            <span class="close-icon" onclick="closeFullImg()">X</span>
         </div>
 
         <div class="gallery">
