--- a/konditionen.html
+++ b/konditionen.html
@@ -140,7 +140,7 @@ und gültig sind. <br>
     </tr>
     <tr>
         <td></td>
-        <td>
+        <td class="spacing">
             <hr class="line" />
         </td>
     </tr>
@@ -250,9 +250,9 @@ und gültig sind. <br>
                                 <td class="title4">Vorschäden:</td>
                                 <td>JA [ ]   NEIN [ ], Wenn JA,Welche?:</td>
                             </tr>
-                            <tr>
+                            <tr">
                                 <td></td>
-                                <td>
+                                <td class="spacing">
                                     <hr class="line" />
                                 </td>
                             </tr>
