--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
+                <li><a href="index.html">Strartseite</a></li>
                 <li><a href="uber.html">Über</a></li>
                 <li><a href="gallery.html">Galerie</a></li>
                 <li><a href="map.html">Routen</a></li>
