--- a/konditionen.html
+++ b/konditionen.html
@@ -163,27 +163,26 @@ und gültig sind. <br>
    <table class="kosten">
     <tr>
         <td class="title3">Kosten:</td>
-        <td>1 Tag (Mo-So) 249 € - 200 Frei-Km</td>
+        <td><div class="fixed">1 Tag (Mo-So)</div> <span>249 € - 200 Frei-Km</span></td>
     </tr>
     <tr>
         <td></td>
-        <td>Wochenende(Sa-So/ 2 Tage) 399 € - 400 Frei-Km</td>
+        <td><div class="fixed">Wochenende(Sa-So/ 2 Tage)</div> <span>399 € - 400 Frei-Km</span></td>
     </tr>
     <tr>
         <td></td>
-        <td>4 Stunde 150 € - 100 Frei-Km</td>
+        <td><div class="fixed">4 Stunde</div> <span>150 € - 100 Frei-Km</span></td>
     </tr>
     <tr>
         <td></td>
-        <td>Woche 999 € - 1000 Frei-Km</td>
+        <td><div class="fixed">Woche</div> <span>999 € - 1000 Frei-Km</span></td>
     </tr>
     <tr>
         <td></td>
-        <td>Je Mehrkilometer 0,60 €</td>
+        <td><div class="fixed">Je Mehrkilometer</div> <span>0,60 €</span></td>
     </tr>
- 
- 
 </table>
+
 
 <p>Benzin ist im Mietpreis nicht erhalten.</p>
 <p>Tankregelung: Vollgetankt bei Abholung, Vollgetankt Zurück.</p>
