--- a/konditionen.html
+++ b/konditionen.html
@@ -86,7 +86,7 @@ und gültig sind. <br>
                 </tr>
                 <tr>
                   <td></td>
-                  <td class="underlineCell"><span class="underline">Handy:</span><span class="underlineLine"></span></td>
+                  <td class="underlineCell"><span class="underline">PLZ/Wohnt:</span><span class="underlineLine"></span></td>
                 </tr>
                 <tr>
                   <td></td>
