--- a/konditionen.html
+++ b/konditionen.html
@@ -82,8 +82,13 @@ und gültig sind. <br>
             <table>
                 <tr>
                   <td class="title2">Mieter/Fahrer:</td>
+                  <td class="underlineCell"><span class="underline">Name/Vorname:</span><span class="underlineLine"></span></td>
+                </tr>
+                <tr>
+                  <td></td>
                   <td class="underlineCell"><span class="underline">Straße:</span><span class="underlineLine"></span></td>
                 </tr>
+                <tr>
                 <tr>
                   <td></td>
                   <td class="underlineCell"><span class="underline">PLZ/Wohnt:</span><span class="underlineLine"></span></td>
