--- a/uber.html
+++ b/uber.html
@@ -51,48 +51,48 @@
     <div class="menu-container">
         <div class="box">
             <div class="box-img">
-                <img src=images/pic3.png alt="">
+                <img src=images/car-year.png alt="">
             </div>
             <h2>Baujahr</h2>
-            <span>1966</span>
+            <span>1971</span>
         </div>
         <div class="box">
             <div class="box-img">
-                <img src=images/pic1.png alt="">
+                <img src=images/piston.png alt="">
             </div>
             <h2>Hubraum</h2>
-            <span>300 PS</span>
+            <span>1570 CCM</span>
         </div>
         <div class="box">
             <div class="box-img">
-                <img src=images/pic2.png alt="">
+                <img src=images/performance.png alt="">
             </div>
-            <h2>Getriebe</h2>
-            <span>V8</span>
+            <h2>Motorleistung</h2>
+            <span>37 KW (50 PS)</span>
         </div>
     </div>
 
     <div class="menu-container2">
         <div class="box">
             <div class="box-img">
-                <img src=images/pic4.png alt="">
+                <img src=images/car-engine.png alt="">
             </div>
-            <h2>Sitzplätze</h2>
+            <h2>Zylinder</h2>
             <span>4</span>
         </div>
         <div class="box">
             <div class="box-img">
-                <img src=images/pic5.png alt="">
+                <img src=images/manual-transmission.png alt="">
             </div>
-            <h2>Lackierung</h2>
-            <span>Grün</span>
+            <h2>Getriebe</h2>
+            <span>Manuel</span>
         </div>
         <div class="box">
             <div class="box-img">
-                <img src=images/pic6.png alt="">
+                <img src=images/car-seat.png alt="">
             </div>
-            <h2>Innenraum</h2>
-            <span>Leder Brown</span>
+            <h2>Sitze</h2>
+            <span>4</span>
         </div>
     </div>
 
@@ -105,7 +105,7 @@
     <div class="container">
 
       <div class="about-banner">
-        <img src=images/car3.jpg width="509" height="459" loading="lazy" alt="Burger with Drinks"
+        <img src=images/car3.jpg width="509" height="459" loading="lazy" alt="auto"
           class="w-100 about-img">
       </div>
 
