--- a/uber.html
+++ b/uber.html
@@ -34,10 +34,12 @@
         </div>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
+                <li><a href="index.html">Strartseite</a></li>
                 <li><a href="uber.html">About</a></li>
                 <li><a href="gallery.html">Galerie</a></li>
                 <li><a href="map.html">Routes</a></li>
-                <li class="kondi"><a href="konditionen.html">Konditionen</a></li>
+                <li class="kondi"><a href="konditionen.html">Konditionen</a></>
+                <li class="buchen"><a href="formular.html">Buchen</a></li>
         </ul>
         <button id="myButton" onclick="location.href='formular.html'" class="btn btn-hover">Buchen</button>
     </header>
@@ -48,7 +50,7 @@
         <h2>Bestes Fahrerlebnis</h2>
     </div>
 
-    <div class="menu-container">
+   <div class="menu-container">
         <div class="box">
             <div class="box-img">
                 <img src=images/car-year.png alt="">
@@ -96,6 +98,7 @@
         </div>
     </div>
 
+
 </section>
 
 
@@ -105,7 +108,7 @@
     <div class="container">
 
       <div class="about-banner">
-        <img src=images/car3.jpg width="509" height="459" loading="lazy" alt="auto"
+        <img src=images/car3.jpg width="509" height="459" loading="lazy" alt="Burger with Drinks"
           class="w-100 about-img">
       </div>
 
@@ -202,7 +205,7 @@
 </footer>
 
     
-    <script src="uber.js"></script>
+    <script src="formular.js"></script>
 
 </body>
 </html>
