--- a/uber.html
+++ b/uber.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +35,7 @@
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
                 <li><a href="index.html">Strartseite</a></li>
-                <li><a href="uber.html">About</a></li>
+                <li><a href="uber.html">Über</a></li>
                 <li><a href="gallery.html">Galerie</a></li>
                 <li><a href="map.html">Routes</a></li>
                 <li class="kondi"><a href="konditionen.html">Konditionen</a></>
