--- a/konditionen.html
+++ b/konditionen.html
@@ -33,7 +33,7 @@
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
                 <li><a href="index.html">Strartseite</a></li>
-                <li><a href="uber.html">About</a></li>
+                <li><a href="uber.html">Über</a></li>
                 <li><a href="gallery.html">Galerie</a></li>
                 <li><a href="map.html">Routes</a></li>
                 <li class="kondi"><a href="konditionen.html">Konditionen</a></li>
@@ -73,7 +73,7 @@ und gültig sind. <br>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><a class="email" href="mailto:bodenseeoldtimer@gmail.com">bodenseeoldtimer@gmail.com</a></td>
+                    <td><a class="email" href="mailto:rent@bodenseeoldtimer.de">rent@bodenseeoldtimer.de</a></td>
                 </tr>
                 
             </table>
