--- a/formular.html
+++ b/formular.html
@@ -34,7 +34,7 @@
         </header>
 
        <h1>Online-Buchungsanfrage</h1>
-       <p class="tel">Sie können auch telefonisch reservieren am nummer :  <br>  +49 160 2256924</p>
+       <p class="tel">Sie können auch telefonisch reservieren am nummer :  <br>  +491753759775</p>
 
      <form action="https://formsubmit.co/bodenseeoldtimer@gmail.com" method="POST">
          <input type="hidden" name="_next" value="http://bodenseeoldtimer.de/thank.html">
