--- a/konditionen.html
+++ b/konditionen.html
@@ -32,7 +32,7 @@
         </div>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
-                <li><a href="index.html">Strartseite</a></li>
+                <li><a href="index.html">Startseite</a></li>
                 <li><a href="uber.html">Über</a></li>
                 <li><a href="gallery.html">Galerie</a></li>
                 <li><a href="map.html">Routes</a></li>
@@ -305,6 +305,7 @@ und gültig sind. <br>
                             benutzen wird. Der Mieter/Fahrer muss das 23. Lebensjahr vollendet haben. Führt ein anderer als der Mieter den
                             Wagen, so gilt dieser stets als Erfüllungsgehilfe des Mieters. Dem Mieter obliegt in diesem Falle die Einhaltung
                             des Mindestalters und die Kontrolle eines gültigen Führerscheins des Fahrers.</p>
+                            <p class="space">Die Anmietung eines Oldtimers beginnt und endet an der Adresse Olgastraße 9, 88045 Friedrichshafen oder an einem zuvor vereinbarten anderen Standort. Die Tagesmiete dauert 23 Stunden und beginnt um 9:00 Uhr und endet um 8:00 Uhr am nächsten Tag. Der Beginn und das Ende der Mietzeit können ebenfalls im Voraus anders vereinbart werden. Wenn der Mieter keine Garage für den Oldtimer über Nacht zur Verfügung stellen kann, wie zuvor erwähnt, ist der Mieter verpflichtet, das Fahrzeug bis 21:00 Uhr an den Vermieter zurückzugeben.</p>
                             <p class="space">Der Mieter ist verpflichtet, sich vor Antritt der Fahrt mit der Bedienung des Oldtimers vertraut zu machen,
                                 insbesondere mit dem Umstand, dass die Fahrzeugtechnik dem Stand der 60er-70er Jahre entspricht. Es wird
                                 speziell darauf hingewiesen, dass das Bewegen eines historischen Wagens im heutigen Straßenverkehr eine
