--- a/uber.html
+++ b/uber.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,10 +34,12 @@
         </div>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
-                <li><a href="uber.html">About</a></li>
+                <li><a href="index.html">Strartseite</a></li>
+                <li><a href="uber.html">Über</a></li>
                 <li><a href="gallery.html">Galerie</a></li>
                 <li><a href="map.html">Routes</a></li>
-                <li class="kondi"><a href="konditionen.html">Konditionen</a></li>
+                <li class="kondi"><a href="konditionen.html">Konditionen</a></>
+                <li class="buchen"><a href="formular.html">Buchen</a></li>
         </ul>
         <button id="myButton" onclick="location.href='formular.html'" class="btn btn-hover">Buchen</button>
     </header>
@@ -48,53 +50,54 @@
         <h2>Bestes Fahrerlebnis</h2>
     </div>
 
-    <div class="menu-container">
+   <div class="menu-container">
         <div class="box">
             <div class="box-img">
-                <img src=images/pic3.png alt="">
+                <img src=images/car-year.png alt="">
             </div>
             <h2>Baujahr</h2>
-            <span>1966</span>
+            <span>1971</span>
         </div>
         <div class="box">
             <div class="box-img">
-                <img src=images/pic1.png alt="">
+                <img src=images/piston.png alt="">
             </div>
             <h2>Hubraum</h2>
-            <span>300 PS</span>
+            <span>1570 CCM</span>
         </div>
         <div class="box">
             <div class="box-img">
-                <img src=images/pic2.png alt="">
+                <img src=images/performance.png alt="">
             </div>
-            <h2>Getriebe</h2>
-            <span>V8</span>
+            <h2>Motorleistung</h2>
+            <span>37 KW (50 PS)</span>
         </div>
     </div>
 
     <div class="menu-container2">
         <div class="box">
             <div class="box-img">
-                <img src=images/pic4.png alt="">
+                <img src=images/car-engine.png alt="">
             </div>
-            <h2>Sitzplätze</h2>
+            <h2>Zylinder</h2>
             <span>4</span>
         </div>
         <div class="box">
             <div class="box-img">
-                <img src=images/pic5.png alt="">
+                <img src=images/manual-transmission.png alt="">
             </div>
-            <h2>Lackierung</h2>
-            <span>Grün</span>
+            <h2>Getriebe</h2>
+            <span>Manuel</span>
         </div>
         <div class="box">
             <div class="box-img">
-                <img src=images/pic6.png alt="">
+                <img src=images/car-seat.png alt="">
             </div>
-            <h2>Innenraum</h2>
-            <span>Leder Brown</span>
+            <h2>Sitze</h2>
+            <span>4</span>
         </div>
     </div>
+
 
 </section>
 
@@ -202,7 +205,7 @@
 </footer>
 
     
-    <script src="uber.js"></script>
+    <script src="formular.js"></script>
 
 </body>
 </html>
