--- a/formular.html
+++ b/formular.html
@@ -28,6 +28,7 @@
                     <li><a href="gallery.html">Galerie</a></li>
                     <li><a href="map.html">Routes</a></li>
                     <li class="kondi"><a href="konditionen.html">Konditionen</a></li>
+                    <li><a href="preise.html">Preise</a></li>
                     <li class="buchen"><a href="formular.html">Buchen</a></li>
             </ul>
             <button class="btn btn-hover">Buchen</button>
