--- a/konditionen.html
+++ b/konditionen.html
@@ -37,6 +37,7 @@
                 <li><a href="gallery.html">Galerie</a></li>
                 <li><a href="map.html">Routes</a></li>
                 <li class="kondi"><a href="konditionen.html">Konditionen</a></li>
+                <li><a href="preise.html">Preise</a></li>
                 <li class="buchen"><a href="formular.html">Buchen</a></li>
         </ul>
         <button id="myButton" onclick="location.href='formular.html'" class="btn btn-hover">Buchen</button>
