--- a/table.html
+++ b/table.html
@@ -35,6 +35,7 @@
             <li><a href="gallery.html">Galerie</a></li>
             <li><a href="map.html">Routes</a></li>
             <li><a href="konditionen.html">Konditionen</a></li>
+            <li><a href="preise.html">Preise</a></li>
         </ul>
         <div class="header-btn">
             <a href="formular.html" class="sign-in">Mieten</a>
