--- a/konditionen.html
+++ b/konditionen.html
@@ -40,9 +40,24 @@
                 <li class="buchen"><a href="formular.html">Buchen</a></li>
         </ul>
         <button id="myButton" onclick="location.href='formular.html'" class="btn btn-hover">Buchen</button>
+        
     </header>
     
         <main>
+            <div class="language-switcher">
+                <a href="konditionen.html"><img
+                    src="images/de.png"
+                    srcset="https://flagcdn.com/w80/de.png 2x"
+                    width="40"
+                    height="24"
+                    alt="Germany"></a>
+                <a href="eng.html"><img
+                    src="images/gb.png"
+                    srcset="https://flagcdn.com/w80/gb.png 2x"
+                    width="40"
+                    height="24"
+                    alt="United Kingdom"></a>
+            </div>
             <h1>Automietvertrag für Selbstfahrer</h1>
             <p>
                 Der Vertrag besteht aus 2 Ausfertigungen und gilt mit der Unterzeichnung beider Vertragspartner.
