--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
                 <li class="buchen"><a href="formular.html">Buchen</a></li>
         </ul>
         <button id="myButton" onclick="location.href='formular.html'" class="btn btn-hover">Buchen</button>
-    </header>
+        
+      </header>
+      <div class="horizontal-menu">
+        <div class="menu-item"><a href="uber.html">Über</a></div>
+        <div class="menu-item"><a href="gallery.html">Galerie</a></div>
+        <div class="menu-item"><a href="map.html">Routen</a></div>
+        <div class="menu-item"><a href="konditionen.html">Konditionen</a></div>
+        <div class="menu-item"><a href="preise.html">Preise</a></div>
+        <div class="menu-item"><a href="formular.html">Buchen</a></div>
+    </div>
 
     <section class="home" id="home">
         
