--- a/formular.html
+++ b/formular.html
@@ -34,6 +34,15 @@
             <button class="btn btn-hover">Buchen</button>
         </header>
 
+        <div class="horizontal-menu">
+            <div class="menu-item"><a href="uber.html">Über</a></div>
+            <div class="menu-item"><a href="gallery.html">Galerie</a></div>
+            <div class="menu-item"><a href="map.html">Routen</a></div>
+            <div class="menu-item"><a href="konditionen.html">Konditionen</a></div>
+            <div class="menu-item"><a href="preise.html">Preise</a></div>
+            <div class="menu-item"><a href="formular.html">Buchen</a></div>
+        </div>
+
        <h1>Online-Buchungsanfrage</h1>
        <p class="tel">Sie können auch telefonisch reservieren am nummer :  <br>  +491753759775</p>
 
