--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,14 @@
         <button id="myButton" onclick="location.href='formular.html'" class="btn btn-hover">Buchen</button>
     </header>
     
+    <div class="horizontal-menu">
+        <div class="menu-item"><a href="uber.html">Über</a></div>
+        <div class="menu-item"><a href="gallery.html">Galerie</a></div>
+        <div class="menu-item"><a href="map.html">Routen</a></div>
+        <div class="menu-item"><a href="konditionen.html">Konditionen</a></div>
+        <div class="menu-item"><a href="preise.html">Preise</a></div>
+        <div class="menu-item"><a href="formular.html">Buchen</a></div>
+    </div>
 
     <main>
         <div class="full-img" id="fullImgBox">
