--- a/uber.html
+++ b/uber.html
@@ -46,6 +46,15 @@
     </header>
 
 
+    <div class="horizontal-menu">
+        <div class="menu-item"><a href="uber.html">Über</a></div>
+        <div class="menu-item"><a href="gallery.html">Galerie</a></div>
+        <div class="menu-item"><a href="map.html">Routen</a></div>
+        <div class="menu-item"><a href="konditionen.html">Konditionen</a></div>
+        <div class="menu-item"><a href="preise.html">Preise</a></div>
+        <div class="menu-item"><a href="formular.html">Buchen</a></div>
+    </div>
+
 <section class="menu" id="menu">
     <div class="heading">
         <span>Steckbrief</span>
